update config
enable java 21 compatibility

replace backgrounds

remove about dialog